[gd_scene load_steps=8 format=2]

[ext_resource path="res://game/main_screens/question_templates/Elements/pair_element.gd" type="Script" id=1]
[ext_resource path="res://game/main_screens/question_templates/Elements/interactable_element.tscn" type="PackedScene" id=2]

[sub_resource type="RectangleShape2D" id=9]
resource_local_to_scene = true
extents = Vector2( 40, 17 )

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;
uniform float width = 2.0;
uniform vec4 color: hint_color;

void vertex() {
	VERTEX += (UV * 2.0 - 1.0) * width;
}

void fragment(){
	vec2 uv = UV;
    vec4 col;
	
	vec2 texture_pixel_size = vec2(1.0) / (vec2(1.0) / TEXTURE_PIXEL_SIZE + vec2(width * 2.0));
	uv = (uv - texture_pixel_size * width) * TEXTURE_PIXEL_SIZE / texture_pixel_size;
	if (uv != clamp(uv, vec2(0.0), vec2(1.0))) {
		COLOR.a = 0.0;
	} else {
		col = texture(TEXTURE, uv);
	}
	
	
    vec2 ps = TEXTURE_PIXEL_SIZE * width; // multiply only once instead of eight times.
    float a;
    float maxa = col.a;
    float mina = col.a;

    // Use 8-way kernel for smoothness
    //------------------//
    //    X   X   X     //
    //      \\ | /       //
    //    X - O - X     //
    //      / | \\       //
    //    X   X   X     //
    //------------------//

    for(float y = -1.0; y <= 1.0; y++) {
        for(float x = -1.0; x <= 1.0; x++) {
            if(vec2(x,y) == vec2(0.0)) {
                continue; // ignore the center of kernel
            }

            a = texture(TEXTURE, UV + vec2(x,y)*ps).a;
            maxa = max(a, maxa); 
            mina = min(a, mina);
        }
    }

    // Fill transparent pixels only, don't overlap texture
    if(col.a == 0.0) {
        COLOR = mix(col, color, maxa-mina);
    } else {
        // Note on old code: if the last mix value is always 0, why even use it?
        COLOR = col;
    }
}"

[sub_resource type="ShaderMaterial" id=7]
resource_local_to_scene = true
shader = SubResource( 3 )
shader_param/width = 2.0
shader_param/color = null

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 0.227451, 0.227451, 0.537255 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="RectangleShape2D" id=6]

[node name="PairElement" instance=ExtResource( 2 )]
script = ExtResource( 1 )

[node name="CollisionShape2D" parent="." index="0"]
position = Vector2( 20, 7 )
shape = SubResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" parent="." index="1"]
margin_left = 0.0
margin_top = 0.0
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_lock_": true
}

[node name="Icon" parent="." index="2"]
material = SubResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="Border" type="Panel" parent="." index="6"]
unique_name_in_owner = true
margin_left = -20.0
margin_top = -10.0
margin_right = 60.0
margin_bottom = 24.0
mouse_filter = 2
custom_styles/panel = SubResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="HighLite" parent="." index="7"]
margin_left = -20.0
margin_top = -10.0
margin_right = 60.0
margin_bottom = 24.0
__meta__ = {
"_edit_lock_": true
}

[node name="Line2D" type="Line2D" parent="." index="8"]
unique_name_in_owner = true
visible = false
points = PoolVector2Array( -20, 7, 0, 0 )
width = 4.0
default_color = Color( 1, 0, 0, 1 )
begin_cap_mode = 2
end_cap_mode = 2
__meta__ = {
"_edit_lock_": true
}

[node name="MouseArea" type="Area2D" parent="." index="9"]
unique_name_in_owner = true
visible = false
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseArea" index="0"]
shape = SubResource( 6 )

[connection signal="input_event" from="." to="." method="_on_PairElement_input_event"]
[connection signal="minimum_size_changed" from="Label" to="." method="_on_Label_minimum_size_changed"]
[connection signal="area_entered" from="MouseArea" to="." method="_on_MouseArea_area_entered"]
[connection signal="area_exited" from="MouseArea" to="." method="_on_MouseArea_area_exited"]
